[package]
name = "erased_set"
description = "A set of erased types"
version = "0.8.0"
authors = ["Maël Obréjan <mael.obrejan@protonmail.com>"]
rust-version = "1.60"
edition = "2021"
license = "MIT"
repository = "https://github.com/malobre/erased_set"
categories = ["no-std", "data-structures"]
readme = "README.md"
keywords = ["anymap", "typemap", "map", "set"]
include = ["/src/", "/Cargo.toml", "/LICENSE"]

[[bench]]
name = "calliper"
path = "benches/calliper.rs"
harness = false

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = false

[features]
default = ["send", "sync"]
send = []
sync = []

[dev-dependencies]
calliper = "0.1.4"
criterion = "0.5.1"
